# ProductSupportAIAgent

./: .env.sample  .gitignore  DEPENDENCY_GUIDE.md  DEVLOG.md  DEVLOG_V2.md  README.md  docker-compose.yml  environment.yml  remainders.md
knowledge_base/: FAQ.md  (+3 more)
shopassist-api/: .dockerignore  .env.example  DEPENDENCY_INJECTION_GUIDE.md  Dockerfile  PACKAGING_GUIDE.md  README.md  dev_server.py  pyproject.toml  requirements.txt
shopassist-api/shopassist_api/: logging_config.py  main.py
shopassist-api/shopassist_api/ai/agents/: shop_assistant.py
shopassist-api/shopassist_api/ai/embeddings/: embedding_service.py
shopassist-api/shopassist_api/ai/models/: __init__.py  llm_client.py
shopassist-api/shopassist_api/ai/prompts/: __init__.py  shop_assistant_prompts.py
shopassist-api/shopassist_api/ai/retrieval/: __init__.py  product_retriever.py
shopassist-api/shopassist_api/api/: chat.py  health.py  products.py  search.py  session.py
shopassist-api/shopassist_api/application/agents/: agent_utils.py  base.py  escalation_agent.py  orchestrator.py  policy_agent.py  product_comparison_agent.py  product_detail_agent.py  product_discovery_agent.py  product_search_agent.py  product_search_expanded_agent.py  query_expansion_agent.py  supervisor_agent.py  token_monitor.py
shopassist-api/shopassist_api/application/interfaces/: __init__.py  di_container.py  product_service_interface.py  service_interfaces.py
shopassist-api/shopassist_api/core/: config.py
shopassist-api/shopassist_api/models/: chunk.py
shopassist-api/shopassist_api/services/: cosmos_service.py  openai_service.py
shopassist-api/shopassist_api/utils/: helpers.py
shopassist-api/tests/: test_dependency_injection.py
shopassist-api/tests/test_ai/: __init__.py  test_agents.py
shopassist-api/tests/test_api/: test_endpoints.py
shopassist-api/tests/test_services/: test_context_builder.py  test_formaters.py  test_query_processor.py
(+145 files in other folders)
